--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -6,19 +6,19 @@
     text-transform: uppercase;
     border: none;
     border-radius: 30px;
-    padding: 20px 40px;
+    padding: 15px 40px;
 
     &:hover{
         text-decoration: none;
     }
     &_primary {
-        color: #fff;
+        color: $white;
         background: linear-gradient( -45deg, rgb(50,43,143) 0%, rgb(63,36,166) 62%, rgb(76,28,188) 100%);
-        box-shadow: 0px 3px 6px 0px rgba(34, 0, 112, 0.2);
+        box-shadow: 0px 3px 6px 0px rgba(50,43,143, 0.2);
         min-width: 270px;
         &:hover{
-            color: #fff;
-            box-shadow: 0px 3px 6px 0px rgba(34, 0, 112, 0.5);
+            color: $white;
+            box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.5);
         }
     }
       
