--- a/src/chunks/header.pug
+++ b/src/chunks/header.pug
@@ -4,16 +4,16 @@ header.header
             .col-3.col-xl-1
                 svg.header__logo(viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
                     g
-                        path.header__logo__path(d="M98,556.26a35.43,35.43,0,1,0,35.43-35.43A35.43,35.43,0,0,0,98,556.26Zm45.28,0a9.84,9.84,0,1,1-9.84-9.84A9.84,9.84,0,0,1,143.29,556.26Z" transform="translate(-98.01 -372.37)")
-                        path.header__logo__path(d="M98,407.81a35.43,35.43,0,1,0,35.43-35.43A35.43,35.43,0,0,0,98,407.81Zm45.28,0a9.84,9.84,0,1,1-9.84-9.84A9.84,9.84,0,0,1,143.29,407.81Z" transform="translate(-98.01 -372.37)")
+                        path.header__logo__path(d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z")
+                        path.header__logo__path(d="M73.8,268.3c0-19.6-15.9-35.5-35.4-35.5C18.8,232.8,3,248.7,3,268.3c0,19.5,15.8,35.4,35.4,35.4l0,0C57.9,303.7,73.8,287.8,73.8,268.3z M28.5,268.3c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8s-4.4,9.8-9.8,9.8l0,0C32.9,278.1,28.5,273.7,28.5,268.3L28.5,268.3L28.5,268.3z")
                         g
-                            rect.header__logo__path(y="81.23" width="33.49" height="56.69")
-                            rect.header__logo__path(x="38.35" y="81.23" width="32.51" height="56.69")
-                        path.header__logo__path(d="M102.82,544.65" transform="translate(-98.01 -372.37)")
+                            rect.header__logo__path(x="40.3" y="165.8" width="33.5" height="56.7")
+                            rect.header__logo__path(x="3" y="165.8" width="32.5" height="56.7")
+                        path.header__logo__path(d="M69,131.4")
                         g
-                            path.header__logo__path(d="M101,653.92c-0.64-1.9.46-3.5,1.78-5.11,6.25-7.65,12.43-15.35,18.68-23,4.31-5.28,8.58-10.61,13.08-15.72,4-4.52,8.91-7.55,15.22-7.48a21,21,0,0,1,18.37,10.09,23.65,23.65,0,0,1,3.55,13.46,4.84,4.84,0,0,1-.85,2.63c-6.44,8.88-12.85,17.79-19.47,26.54A82.76,82.76,0,0,1,136,671.38a21.49,21.49,0,0,1-18.55,4.23,20.25,20.25,0,0,1-12.74-9.28A22.24,22.24,0,0,1,101,653.92Z" transform="translate(-98.01 -372.37)")
-                            path.header__logo__path(d="M171.57,637.64v37.57H141.65Z" transform="translate(-98.01 -372.37)")
-                            path.header__logo__path(d="M100.89,607.18h28.53l-28.53,34.69V607.18Z" transform="translate(-98.01 -372.37)")
+                            path.header__logo__path(d="M70.8,22.2c0.6,1.9-0.5,3.5-1.8,5.1c-6.3,7.7-12.4,15.3-18.7,23C46,55.6,41.7,60.9,37.2,66c-4,4.5-8.9,7.5-15.2,7.5c-7.5,0.2-14.5-3.7-18.4-10.1c-2.5-4-3.7-8.7-3.6-13.5C0,49,0.3,48,0.9,47.3c6.4-8.9,12.9-17.8,19.5-26.5c4.4-6,9.5-11.4,15.4-16C41,0.6,47.8-1,54.4,0.6c5.3,1.2,9.9,4.6,12.7,9.3C69.5,13.4,70.8,17.7,70.8,22.2z")
+                            path.header__logo__path(d="M0.2,38.4l0-37.6h30L0.2,38.4z")
+                            path.header__logo__path(d="M70.9,68.9H42.4l28.5-34.7V68.9z")
             .col-7.col-xl-2
                 a.header__email(href="mailto:work@websoho.ru") work@websoho.ru
     svg.header__nav#header__nav(version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve")
