--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,6 @@
 html(lang="ru", dir="ltr")
     include chunks/head.pug
-    body
+    body.index
         script(src="./js/jquery.min.js")
         script(src="./js/jquery.nicescroll.min.js")
         script(src="./js/app.min.js")
@@ -39,14 +39,15 @@ html(lang="ru", dir="ltr")
             .container
                 .row
                     .col-xl-6.offset-xl-1.align-items-center
-                        h1.heading Разработка. Реклама. Продвижение. Маркетинг продаж.
-                        a.btn.btn_primary(href="#") обсудим проект?
-        .content.content_section
-            .container
+                        h1.heading Разработка. Реклама. Продвижение. Интернет-маркетинг.
+                        a.btn.btn_primary(href="#") Обсудим проект?
+        .content
+            .container.p-relative
+                .element.element_point
                 .row
                     .col-xl-6
-                        h2.heading От разработки 
-                            span.heading-color до первых клиентов 
+                        h2.heading.heading_smaller От разработки 
+                            span.text-darkblue до первых клиентов 
                             | всего 10 дней
                         p.offer Занимаемся любимым делом более 5 лет, поэтому не просто делаем и продвигаем сайты. Мы&nbsp;заинтересованы в&nbsp;вашем росте. Поверьте, мы болеем за&nbsp;ваш проект так&nbsp;же, как&nbsp;и&nbsp;вы, поэтому тщательно прорабатываем все детали, чтобы сайт нравился не&nbsp;только вам, но и&nbsp;потребителю. Обращаясь&nbsp;к&nbsp;нам, вы&nbsp;получаете соратников, которые знают короткий путь к&nbsp;сердцам ваших покупателей. 
                         .content__btn
@@ -60,7 +61,7 @@ html(lang="ru", dir="ltr")
                         p.offer Сроки для нас — не пустой звук. Мы четко выстраиваем работу, чтобы ваш бизнес начал приносить прибыль как можно скорее. Вы всегда будете в курсе процесса и сможете понимать на каком этапе реализация проекта.
                     .col-xl-6.offset-xl-3
                         h3.heading У вас будут 
-                            span.heading-color преимущества
+                            span.text-darkblue преимущества
                         .toggle-tabs
                             .toggle-tabs__item
                                 .toggle-tabs__item__title Бизнес на любом устройстве 
@@ -77,11 +78,11 @@ html(lang="ru", dir="ltr")
                             .toggle-tabs__item
                                 .toggle-tabs__item__title Гармоничный контент
                                 .toggle-tabs__item__content Только качественный и&nbsp;релевантный контент может обеспечить большие продажи и&nbsp;первые места в&nbsp;поисковых системах
-                            .toggle-tabs__item
+                            .toggle-tabs__item.last
                                 .toggle-tabs__item__title Работающий дизайн
                                 .toggle-tabs__item__content Создает положительный имидж компании и формирует эффект воздействия на потребителя
-        .content.content_portfolio
-            .content_portfolio__elements
+        .portfolio
+            .portfolio__elements
                 svg.elements(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                     defs
                         linearGradient#gradient_02(data-name="gradient_02" x1="0" y1="0" x2="1122.56" y2="425.41" gradientUnits="userSpaceOnUse")
@@ -95,9 +96,9 @@ html(lang="ru", dir="ltr")
                     .col-xl-5
                         h4.heading Реализованные 
                             a.heading__link(href="#") проекты
-                    .col-xl-3.offset-xl-2
-                        a.content_portfolio__link(href="#") все проекты здесь >  
-                .portfolio.scroll-pane.horizontal-only
+                    .col-xl-3.offset-xl-1
+                        a.portfolio__link(href="#") все проекты здесь >  
+                .portfolio__row.scroll-pane.horizontal-only
                     .row  
                         .col-10.col-sm-5.col-lg-3.portfolio__item
                             a.portfolio__title(href="#") #Логотип
@@ -117,18 +118,18 @@ html(lang="ru", dir="ltr")
                                 img.portfolio__image(src="./images/03.png")
         .content.content_contact
             .container
-                .row
+                .row.align-items-end
                     .col-xl-6
                         h4.heading Нужны клиенты? <br/> Мы знаем как их получить
                         form.form.form_inline(action="")
                             input.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
-                            button.btn.btn_primary(type="submit") Хочу больше клиентов
+                            button.btn.btn_primary(type="submit") Обсудим проект
                     .col-xl-3
                         .offer Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.
-        .content.content_blog
+        .content.blog
             .container
                 .heading Самое актуальное в нашем 
-                    a(href="#") блоге
+                    a.link(href="#") блоге
                 .row.justify-content-between
                     .col-xl-3.blog__item
                         a(href="#").blog__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
