--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -3,6 +3,8 @@ $yellow:                    #fdc830;
 $red:                       #d70000;
 $violet:                    #30219f;
 $darkblue:                  #1C097A;
+$lightgreen:                #d3fb78;
+$darkred:                   #6c1400;
 
 $white:                     #ffffff;
 $black:                     #0e0101;
