--- a/src/chunks/head.pug
+++ b/src/chunks/head.pug
@@ -4,4 +4,5 @@ head
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title SOHO студия
 
+    link(href='./css/jquery.jscrollpane.css', rel='stylesheet')
     link(href='./css/style.min.css', rel='stylesheet')
